--- a/templates/index3.html
+++ b/templates/index3.html
@@ -15,7 +15,7 @@
             background-color: rgb(163, 185, 200)
         }
 </style>
-<h1>K-JAM Equity Stocks Prediction</h1>
+<h1>KJAM Equity Stocks Prediction</h1>
 <body>
     <style> body {
         background-color: rgb(237, 246, 252);
